# newRepository

build-untitled-Desktop_Qt_6_6_1_GCC_64bit-Debug/: CMakeCache.txt  qtcsettings.cmake
build-untitled-Desktop_Qt_6_6_1_GCC_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  untitled
build-untitled-Desktop_Qt_6_6_1_GCC_64bit-Release/.cmake/api/v1/reply/: cache-v2-ef8bb250c1f01a9f0d3f.json  cmakeFiles-v1-5f687a603c1442265568.json  codemodel-v2-07cfcbaff0e79aed05df.json  directory-.-Release-16ad625bef4b9b58c43e.json  target-untitled_autogen-Release-6a42b1d7ba699edc070c.json  target-untitled_autogen_timestamp_deps-Release-d38a904952157cf161ea.json
build-untitled-Desktop_Qt_6_6_1_GCC_64bit-Release/.cmake/api/v1/reply.prev/: index-2024-01-23T05-37-12-0154.json  target-untitled-Release-965600492e56016698db.json
build-untitled-Desktop_Qt_6_6_1_GCC_64bit-Release/.qt/: QtDeploySupport.cmake
build-untitled-Desktop_Qt_6_6_1_GCC_64bit-Release/.qtc_clangd/: compile_commands.json
build-untitled-Desktop_Qt_6_6_1_GCC_64bit-Release/.qtc_clangd/.cache/clangd/index/: Python.h.45B3C8426FA02F13.idx  QApplication.E882812A75D91ABC.idx  QCalendarWidget.560D8849D8817C66.idx  QCheckBox.90385CF131CD81F5.idx  QIcon.1E9DF6BFEA9DA659.idx  (+309 more)
build-untitled-Desktop_Qt_6_6_1_GCC_64bit-Release/untitled_autogen/: deps
build-untitled-Desktop_Qt_6_6_1_GCC_64bit-Release/untitled_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
untitled/: CMakeLists.txt  gpio.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  pythonwrapper.cpp  pythonwrapper.h
